# SegfaultingHTTPServer

./: CMakeLists.txt  ErrorCodes.h  Server.c  Server.h  main.c
includes/: Client.h  ErrorCodes.h  HTTPRequest.h  HashTable.h  LinkedList.h  Server.h  SocketIO.h
src/: HTTPRequest.c  HashTable.c  LinkedList.c  Server.c  SocketIO.c  main.c
